新增:dubbo模块、common模块、主POM依赖

--- a/ditran-dubbo/pom.xml
+++ b/ditran-dubbo/pom.xml
@@ -17,5 +17,15 @@
             <artifactId>ditran-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.dmall</groupId>
+            <artifactId>ditran-common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
     </dependencies>
 </project>
