--- a/ditran-core/pom.xml
+++ b/ditran-core/pom.xml
@@ -45,6 +45,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.20.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
