--- a/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-active/pom.xml
+++ b/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-active/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ditran-sample-dubbo-active</artifactId>
+    <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.mz</groupId>
+            <artifactId>ditran-dubbo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
