--- a/ditran-core/pom.xml
+++ b/ditran-core/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ditran</artifactId>
+        <artifactId>ditran-parent</artifactId>
         <groupId>org.mz</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <version>1.0-SNAPSHOT</version>
 
     <artifactId>ditran-core</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.mz</groupId>
             <artifactId>ditran-common</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
