--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mz</groupId>
-    <artifactId>ditran</artifactId>
+    <artifactId>ditran-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
@@ -13,13 +13,14 @@
         <module>ditran-common</module>
         <module>ditran-sample</module>
         <module>ditran-core</module>
+        <module>ditran-all</module>
     </modules>
 
     <properties>
         <dubbo.version>2.6.5</dubbo.version>
         <curator.version>2.9.1</curator.version>
         <netty.version>3.10.6.Final</netty.version>
-        <spring.version>5.1.0.RELEASE</spring.version>
+        <spring.version>5.1.3.RELEASE</spring.version>
     </properties>
 
     <dependencyManagement>
@@ -50,17 +51,6 @@
                 <artifactId>spring-aop</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-jdbc</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
@@ -123,7 +113,30 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.47</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.1.9</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.39</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.2.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
