--- a/ditran-dubbo/pom.xml
+++ b/ditran-dubbo/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ditran-dubbo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project.parent.version}</version>
 
     <dependencies>
         <dependency>
