--- a/ditran-sample/ditran-sample-dubbo/pom.xml
+++ b/ditran-sample/ditran-sample-dubbo/pom.xml
@@ -15,6 +15,24 @@
         <module>ditran-sample-dubbo-passiveA</module>
         <module>ditran-sample-dubbo-passiveB</module>
     </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.mz</groupId>
+            <artifactId>ditran-dubbo</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
