--- a/ditran-sample/pom.xml
+++ b/ditran-sample/pom.xml
@@ -3,17 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ditran-parent</artifactId>
-        <groupId>org.mz</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.4.RELEASE</version>
     </parent>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ditran-sample-dubbo</module>
-    </modules>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ditran-sample</artifactId>
+    <groupId>org.mz</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-
+    <modules>
+        <module>ditran-sample-dubbo</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.9</version>
+        </dependency>
+    </dependencies>
 </project>
