--- a/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-active/src/main/resources/application-dev.properties
+++ b/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-active/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ spring.datasource.username=qaprogram
 spring.datasource.password=qaprogram123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #dubbo
-dubbo.application.name=ditran-passiveA
+dubbo.application.name=ditran-active
 dubbo.registry.address=zookeeper://devzk1.dmall.com:2181?backup=devzk2.dmall.com:2181,devzk3.dmall.com:2181
-dubbo.protocol.port=17721
+dubbo.protocol.port=17722
 #ditran
 ditran.zookeeper=devzk1.dmall.com:2181,devzk2.dmall.com:2181
