--- a/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-passiveB/src/main/resources/application-local.properties
+++ b/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-passiveB/src/main/resources/application-local.properties
@@ -5,8 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #dubbo
-dubbo.application.name=ditran-passiveA
+dubbo.application.name=ditran-passiveB
 dubbo.registry.address=zookeeper://localhost:2181
-dubbo.protocol.port=17721
+dubbo.protocol.port=17722
 #ditran
 ditran.zookeeper=localhost:2181
