新增:测试代码修改

--- a/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-passiveB/src/main/resources/application-dev.properties
+++ b/ditran-sample/ditran-sample-dubbo/ditran-sample-dubbo-passiveB/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.password=qaprogram123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #dubbo
 dubbo.application.name=ditran-passiveB
-dubbo.registry.address=zookeeper://devzk1.dmall.com:2181?backup=devzk2.dmall.com:2181,devzk3.dmall.com:2181
+dubbo.registry.address=zookeeper://localhost:2181
 dubbo.protocol.port=17722
 #ditran
-ditran.zookeeper=devzk1.dmall.com:2181,devzk2.dmall.com:2181
+ditran.zookeeper=localhost:2181
