新增:dubbo-all模块新增

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ditran-common</module>
         <module>ditran-sample</module>
         <module>ditran-core</module>
+        <module>ditran-all</module>
     </modules>
 
     <properties>
